<resources>
  <string name="app_name">SeriesGuide to Plex</string>

  <string name="source_name">Plex</string>
  <string name="source_description">Open videos directly in Plex</string>

  <string name="settings_label">Settings</string>

  <string name="pref_key_category_general">pref_category_general</string>
  <string name="pref_title_general">General</string>

  <string name="done">Done</string>

  <string name="pref_key_launcher_intent">pref_launcher_intent</string>
  <string name="pref_title_launcher_intent">Hide App Icon</string>
  <string name="pref_summary_launcher_intent_on">App icon is hidden.</string>
  <string name="pref_summary_launcher_intent_off">App icon is visible on homescreen.</string>

  <string name="pref_key_category_integrations">pref_category_integrations</string>
  <string name="pref_title_integrations">Integrations</string>

  <string name="pref_key_seriesguide_integration">pref_seriesguide_integration</string>
  <string name="pref_title_seriesguide_integration">SeriesGuide App</string>
  <string name="pref_summary_seriesguide_installed">Open SeriesGuide -> Click a show -> Scroll -> Click
    \"Customize Extensions\"</string>
  <string name="pref_summary_seriesguide_not_installed">Click here to install SeriesGuide app.</string>

  <string name="pref_key_plex_integration">pref_plex_integration</string>
  <string name="pref_title_plex_integration">Plex App</string>
  <string name="pref_summary_plex_installed">Open Plex application to setup your device.</string>
  <string name="pref_summary_plex_not_installed">Click here to install Plex app.</string>

  <string name="error_install_seriesguide">Please install SeriesGuide App first!</string>
  <string name="action_extension">Open in Plex</string>
</resources>
